TODO
	* Replace "sanitization" with SQL Prepared Statements
	* General code clean-up
	* Re-work user creation & management. Setup.php should only create one (administrator) user. Other users should be created from a separate settings.php page or something similar.

CHANGELOG

2023-04-26:
	* Updated the upload page to display the file's download link immediately after uploading
	* SimpleFS now automatically creates a ZIP file when a user uploads multiple files (requires php-zip module)